Work from Main Machine

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Welcome to the guess the Weather Game!</title>
+	<title>Guess the Weather Game!</title>
 </head>
 <body>
 {{{body}}}
